# FFS

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
examples/: counter.ffs  hello.ffs
include/: compiler.h  error.h  program.h  util.h  version.h.in  vm.h
src/: compiler.cpp  error.cpp  main.cpp  util.cpp  vm.cpp
